# engine

./: .gitattributes  .gitignore  Cargo.toml  LICENSE.md  README.md  SConstruct  build.py  build.rs
docs/: Vectors.md  build.md  components.md  contrib.md  features.md  guide.md  hardware.md  memory.md  namespaces.md  resources.md  rust.md  style.md  tech.md  transforms.md
docs/graphics/: apis.md
include/citrus/: engine.hpp  physics.hpp  render.hpp
include/core/: Main.hpp  XLibglobals.h  XLibglobals.hpp  component.hpp  crash.hpp  errno.hpp  extensions.h  extensions.hpp  hash.hpp  inet.hpp  input.hpp  jobsys.hpp  json.hpp  log.hpp  math.hpp  mem.h  mem.hpp  mem_int.hpp  mesh.hpp  mesh_int.hpp  mutex.hpp  object.hpp  option.hpp  os.h  pair.hpp  rc.hpp  rng.hpp  rustints.h  scene.hpp  scene_int.hpp  simd.h  simd.hpp  stack.hpp  string.hpp  sync.hpp  taggedptr.hpp  thread.hpp  time.hpp  toml.hpp  transform.hpp  (+3 more)
include/engine/: engine.hpp  physics.hpp  render.hpp
include/graphics/: apis.hpp  camera.hpp  compute.hpp  glGlobals.hpp  initGL.hpp  matrix.hpp  shader.hpp  vkAlloc.hpp  vkCall.h  vkCall.hpp  vkGlobals.h  vkGlobals.hpp  vkInit.h  vkInit.hpp
include/physics/: aabb.hpp  collider.hpp  joints2D.hpp  physmain.hpp  physobject.hpp  rigidbody.hpp  shape.hpp  sim.hpp  vectors.hpp
include/sys/: Windows.h  stb_image.h  toml.hpp
soloud/src/: SConscript
src/: compound.rs  jobs.rs  lib.rs  mesh.rs
src/core/: SConscript  errno.cpp  gameplayMain.cpp  hash.cpp  input.cpp  jobsys.cpp  ldScene.cpp  log.cpp  main.cpp  mem.c  mem.cpp  memmgr.cpp  rng.cpp  siphash.cpp  stb_image.c  time.cpp
src/ecs/: component.rs  handle.rs  mod.rs  object.rs
src/graphics/: SConscript  draw.cpp  initGL.cpp  vkDraw.cpp  vkLoad.cpp  windows_window.c  windows_window.cpp  xinit.c
src/internal/: alloc.rs  cpu_waste.S  gameplay.rs  mod.rs  render.rs  sync.rs  threads.rs  util.rs  vendor.rs
src/physics/: Sconscript  collider2d.cpp  init.cpp  ivec.cpp  joints2D.cpp  physmain.cpp  queue.cpp  rb2d.cpp  rb_constructors.cpp  rb_owner.cpp  setTransform.cpp  step.cpp  vec.cpp
src/sound/: internals.rs  mod.rs  settings.rs  sound.rs
(+96 files in other folders)
